[package]
name = "ssh-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
rand_core = "0.6"
hex = "0.4"

[[bin]]
name = "ssh-impl"
path = "src/main.rs"

[dev-dependencies]

